--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-02-13  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/Mutils.h (Matrix_with_SPQR): #define (or #undef), in order to
+	allow easy building "SPQR-free version" of Matrix.
+
+2009-02-11  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/Csparse.R (replCmat): another check for 'has.x'
+	* tests/indexing.R: very large (very sparse) sub-indexing.
+
 2009-01-30  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.999375-20
@@ -49,7 +59,8 @@
 
 2009-01-26  Douglas Bates <bates@stat.wisc.edu>
 
-	* src/cs_utils.c (Matrix_as_cs): fix needed in diagU2N case
+	* src/cs_utils.c (Matrix_as_cs): in diagU2N case: Force sorted
+	columns after expanding unit diagonal.
 
 2009-01-21  Martin Maechler  <maechler@stat.math.ethz.ch>
 
@@ -69,6 +80,11 @@
 2009-01-19  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version,Date): release 0.999375-18 (as of yesterday)
+
+2009-01-18  Douglas Bates <bates@stat.wisc.edu>
+
+	* [r2319] src/Csparse.c, src/Csparse.h: Added an untested create_Csparse
+	  function
 
 2009-01-17  Martin Maechler  <maechler@stat.math.ethz.ch>
 
