--- a/TODO
+++ b/TODO
@@ -184,6 +184,15 @@
   People erronously try rbind/cbind see that they don't work and then
   reinvent the wheel!
 
+  --> Consider using the new  'dotMethods' functionality to define
+      cbind() and rbind() versions that work with Matrix.
+
+- In  all(M1 == M2)  for sparse large matrices M1, M2 (e.g. M2 <- M1 !),
+  the intermediate 'M1 == M2' typically is dense, hence potentially using
+  humongous amount of memory.
+  We should/could devise something like   allCompare(M1, M2, `==`)
+  which would remain sparse in all its computations.
+
 --------
 
 - Reconsider the linkages in the include files for the SuiteSparse
@@ -193,3 +202,4 @@
   file src/SPQR/Include/SuiteSparseQR_C.h so that it does not expect
   to have src/UFsparse and src/CHOLMOD/Include on the include path.
   Maybe just those two should be added to the include path.
+
